Fixed problem with z-index of the map

--- a/css/map.css
+++ b/css/map.css
@@ -773,7 +773,7 @@ noscript p
 	z-index: 10000;
 }
 
-.olMap {
+.olMap:not(.mapFrame) {
 	z-index: 10000 !important;
 }
 
